--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 	<title>Alien vs Alien</title>
+	<style>
+		body {
+			padding: 0;
+			margin: 0;
+			background: url(assets/img/background.jpg);
+		}
+	</style>
 </head>
 <body>
 	<script type="text/javascript" src="js/phaser.js"></script>
